syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.netty.grpc.generate";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse){}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

